# ChessPedagogue-v0.5.0

./: AndroidManifest.xml  ApiKeyConfig.java  Board.java  CMakeLists.txt  ChatAdapter.java  ChatMessage.java  ChessBoardView.java  ChessCoachManager.java  ChessConversationActivity.java  ChessGameManager.java  EnhancedConversationManager.java  GameAnalysisActivity.java  GameDatabaseHelper.java  MainActivity.java  OnSquareTapListener.java  OpenAIService.java  SavedGamesActivity.java  SoundManager.java  SpeechRecognitionManager.java  SplashActivity.java  StockfishManager.java  Utils.java  activity_chess_conversation.xml  activity_game_analysis.xml  activity_main.xml  activity_saved_games.xml  activity_splash.xml  arch_compatibility.h  build.gradle  chat_panel_layout.xml  gradle.properties  ic_launcher_foreground.xml  item_message_coach.xml  item_message_user.xml  local.properties  main_menu.xml  native_bridge.cpp  rounded_panel_background.xml  settings.gradle  slide_down.xml  (+4 more)
drawable/: bg_message_user.xml
stockfish/: jstockfish_Uci.cpp  stockfish_wrapper.cpp
ui/theme/: Color.kt  Theme.kt  Type.kt
